# cooking

./: .gitignore  pyproject.toml
backend/: .gitignore  langgraph.json  main.py  pyproject.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/agent/: chat_agent.py  main.py
backend/agent/tools/: web_search.py
backend/database/mongo/: main.py
backend/database/postgres/: checkpoint.py  postgres.py  repository.py
backend/llm/: model.py
backend/prompts/: main.md
backend/routers/: main.py  session.py
backend/service/: chat.py
backend/tests/: test_agent.py
backend/utils/: path_tool.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/[[...id]]/: page.tsx
frontend/app/chat/section/: chat-box.tsx  chat-start.tsx  session-list.tsx
frontend/components/chat-box/: chat-input.tsx  chat-start.tsx  index.tsx
frontend/features/chat/: convasition-box.tsx  convasition-list.tsx
frontend/services/: http-service.ts
frontend/services/api/: session.ts
