[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.1",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.31",
]
